align all quiz container content into correct spacing

--- a/assets/css/play.css
+++ b/assets/css/play.css
@@ -143,14 +143,18 @@ body{
 
 .statsRow {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   border: rgb(255, 255, 255) 2px solid;
   border-radius: 10px;
   margin: 10px;
   height: 70px;
-  padding: 0 30px;
+  padding: 10px 30px;
+  flex-direction: row;
+  align-content: flex-start;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
 }
+
 
 .statsRow .title{
   font-size: 20px;
@@ -219,6 +223,7 @@ body{
   align-content: center;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
 }
 
 .options{
